chore: change the header in base.html template

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Todo App</h1>
+    <h1>FastAPI User Authentication project using JWT</h1>
   </header>
 
   <main>
