feat!: Use HTTP-only cookies which contains the JWT token to handle user sessions

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{{ url_for('static', path='/css/styles.css') }}">
   <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -10,9 +11,7 @@
     <h1>FastAPI User Authentication project using JWT</h1>
   </header>
 
-  <main>
-    {% block body %}{% endblock %}
-  </main>
+  {% block body %}{% endblock %}
   
 </body>
 </html>
