feat: Support login + logout

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,5 +10,7 @@
   <input type="submit">
 </form>
 
+<a href="{{ url_for('register') }}">Don't have an account yet? Click to register!</a>
+
 <script src="{{ url_for('static', path='/js/login.js') }}"></script>
 {% endblock %}
