--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,10 @@
     <h1>FastAPI User Authentication project using JWT</h1>
   </header>
 
+  <div id="error-message" class="hidden"></div>
+
   {% block body %}{% endblock %}
-  
+
+<script src="{{ url_for('static', path='/js/script.js') }}"></script>
 </body>
 </html>
